--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,8 +15,8 @@
     outline: none;
   }
   .container {
-    background-color: PapayaWhip;
-    border: 1px solid black;
+    /*background-color: PapayaWhip;*/
+    /*border: 1px solid black;*/
     padding: 10px;
     margin: 10px 100px;
     min-width: 400px;
