--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,10 +4,12 @@
     /*background-image: url("pattern_038.gif");*/
   }
   .signface {
-    margin: 100px 60px 60px 100px;
+    margin: 100px 60px 30px 100px;
     font-size: 5em;
+    font-weight:bold;
     text-transform: uppercase;
-    /*background-image: url("pattern_038.gif");*/
+/*    font-family: 'Raleway', sans-serif;
+*/    /*background-image: url("pattern_038.gif");*/
     background-color: #EEEEEE;
     /*white-space: nowrap;*/
     overflow: auto;
@@ -16,13 +18,14 @@
   }
   .container {
     /*background-color: PapayaWhip;*/
-    /*border: 1px solid black;*/
+    border: 1px solid black;
     padding: 10px;
-    margin: 10px 100px;
+    margin: 0px 100px;
     min-width: 400px;
     max-width: 1000px;
     height: 100%;
     overflow-y: auto;
+    height: 170px;
   }
   .letter-and-count {
     /*border: 1px solid red;*/
@@ -32,4 +35,15 @@
     font-size: 2em;
     text-align: center;
   }
+  .on-hand-container {
+    /*background-color: PapayaWhip;*/
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px 100px;
+    min-width: 400px;
+    max-width: 1000px;
+    height: 100%;
+    overflow-y: auto;
+  }
+
 </style>
